[package]
edition = "2021"
name = "dos-cp"
version = "0.3.0"
rust-version = "1.61"
authors = ["warlock <internalmike@gmail.com>"]
description = "DOS code pages."
readme = "README.md"
documentation = "https://docs.rs/dos-cp/"
keywords = ["codepage", "dos", "oem", "unicode", "encoding"]
categories = ["encoding", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/A1-Triard/dos-cp"

[workspace]
exclude = [
    "generator",
    "ensure_no_std",
    "tools",
    "examples",
]

[features]
default = ["nightly", "load"]
nightly = ["iter-identify_first_last/nightly"]
load = ["nightly", "dep:pc-ints", "dep:errno-no-std", "iter-identify_first_last"]

[dependencies]
errno-no-std = { version = "0.1.5", default-features = false, optional = true }
iter-identify_first_last = { version = "0.1.0", default-features = false, optional = true }
panicking = { version = "0.4.0", default-features = false }
pc-ints = { version = "0.3.0", optional = true }

[badges]
maintenance = { status = "actively-developed" }
