[package]
edition = "2021"
name = "dos-cp"
version = "0.4.0"
rust-version = "1.61"
authors = ["warlock <internalmike@gmail.com>"]
description = "DOS code pages."
readme = "README.md"
documentation = "https://docs.rs/dos-cp/"
keywords = ["codepage", "dos", "oem", "unicode", "encoding"]
categories = ["encoding", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/A1-Triard/dos-cp"

[workspace]
exclude = [
    "generator",
    "ensure_no_std",
    "tools",
    "examples",
]

[features]
default = ["nightly", "load"]
nightly = ["iter-identify_first_last/nightly"]
load = ["nightly", "dep:pc-ints", "iter-identify_first_last"]

[dependencies]
either = { version = "1.8.0", default-features = false }
exit-no-std = "0.2.0"
iter-identify_first_last = { version = "0.1.0", default-features = false, optional = true }
panicking = { version = "0.4.0", default-features = false }
pc-ints = { version = "0.3.1", optional = true }

[badges]
maintenance = { status = "actively-developed" }
