[package]
edition = "2021"
name = "dos-cp"
version = "0.6.1"
rust-version = "1.82"
authors = ["warlock <internalmike@gmail.com>"]
description = "DOS code pages."
readme = "README.md"
documentation = "https://docs.rs/dos-cp/"
keywords = ["codepage", "dos", "oem", "unicode", "encoding"]
categories = ["encoding", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/A1-Triard/dos-cp"

[workspace]
exclude = [
    "generator",
    "ensure_no_std",
    "tools",
    "examples",
]

[features]
default = ["load"]
## disable if you don't need DOS-specific code for loading and using codepages like print(ln)! macros.
load = ["dep:pc-ints", "iter-identify_first_last"]

[dependencies]
document-features = "0.2.7"
either = { version = "1.8.0", default-features = false }
exit-no-std = "0.2.0"
iter-identify_first_last = { version = "0.2.0", default-features = false, optional = true }
panicking = { version = "0.4.0", default-features = false }
pc-ints = { version = "0.3.1", optional = true }

[badges]
maintenance = { status = "actively-developed" }
