[package]
edition = "2021"
name = "dos-cp-generator"
version = "0.2.1"
rust-version = "1.61"
authors = ["warlock <internalmike@gmail.com>"]
description = "DOS code pages build tool for `dos-cp`."
readme = "README.md"
documentation = "https://docs.rs/dos-cp-generator/"
keywords = ["codepage", "dos", "oem", "unicode", "encoding"]
categories = ["encoding"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/A1-Triard/dos-cp"

[dependencies]
dos-cp = { path = "..", version = "0.2.1" }
panicking = "0.4.0"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"

[badges]
maintenance = { status = "actively-developed" }
