[package]
edition = "2021"
name = "hello"
version = "0.0.0"
publish = false

[profile.dev]
panic = "abort"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

[dependencies]
dos-cp = { path = "../.." }
exit-no-std = "0.2.1"
panic-no-std = "0.1.0"
panicking = { version = "0.5.0", default-features = false, features = ["abort"] }
pc-atomics = "0.0.2"
rlibc-ext = "0.1.0"

[build-dependencies]
dos-cp-generator = { path = "../../generator" }
