[package]
edition = "2021"
name = "keycodes"
version = "0.0.0"
publish = false

[profile.dev]
panic = "abort"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

[dependencies]
dos-errno-and-panic = "0.0.4"
dos-cp = { path = "../.." }
exit-no-std = "0.2.0"
panicking = { version = "0.4.0", default-features = false, features = ["abort"] }
pc-atomics = "0.0.2"
rlibc = "1.0.0"
either = { version = "1.8.0", default-features = false }

[build-dependencies]
dos-cp-generator = { path = "../../generator" }
