[package]
edition = "2021"
name = "keycodes"
version = "0.0.0"
publish = false

[profile.dev]
panic = "abort"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

[dependencies]
dos-cp = { path = "../.." }
exit-no-std = "0.2.1"
panicking = { version = "0.5.0", default-features = false, features = ["abort"] }
either = { version = "1.8.0", default-features = false }
panic-no-std = "0.1.0"
rlibc-ext = "0.2.0"

[build-dependencies]
dos-cp-generator = { path = "../../generator" }
